# toondb

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  test_token_logging.py
docs/: accuracy_benchmarks.md  mongodb-operations-coverage.md  postgresql-operations-coverage.md  test-analysis-log.md
examples/: connect_example.py  mongo_example.py  mysql_example.py  postgres_example.py
scripts/: setup_mongodb.py  setup_test_databases.py
tests/: test_connect.py  test_mongo_adapter.py  test_mysql_adapter.py  test_postgres_adapter.py
tests/accuracy_benchmarks/: __init__.py  config.py  llm_client.py  metrics.py  report_generator.py  test_accuracy.py  test_suite.py
tests/accuracy_benchmarks/fixtures/: __init__.py  sample_queries.py
tests/core_components_tests/: __init__.py  test_converter.py  test_mongo_cleaning.py  test_mysql_cleaning.py  test_postgres_cleaning.py  test_stats.py  test_token_counter.py
tests/efficiency_benchmarks/: __init__.py  test_db_efficiency.py  test_token_efficiency.py
tests/real_world_benchmarks/: __init__.py  test_cost_savings.py
toondb/: __init__.py
toondb/adapters/: __init__.py  base.py  exceptions.py  mongo_adapter.py  mysql_adapter.py  postgres_adapter.py
toondb/core/: __init__.py  converter.py
toonpy/: __init__.py
toonpy/adapters/: __init__.py  base.py  exceptions.py  mongo_adapter.py  mysql_adapter.py  postgres_adapter.py
toonpy/core/: __init__.py  converter.py  stats.py  token_counter.py
